--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=rootuser
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true
 
-home.folder=/Users/mousumi.saha/
+folder.path=/Users/mousumi.saha/
